--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-war-plugin</artifactId>
+      <version>3.3.2</version>
+      <type>maven-plugin</type>
     </dependency>
   </dependencies>
   <build>
